--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
     "onchange": "^3.3.0",
+    "prettier": "^1.12.1",
     "tape": "^4.9.0"
   },
   "dependencies": {}
