--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["env"],
-  "plugins": ["transform-class-properties"]
+  "plugins": ["transform-class-properties"],
+  "env": {
+    "browser": true
+  }
 }
